# esrgan-super-resolution

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: inference_config.yaml  train_config.yaml
notebooks/: astronomy_pipeline.ipynb  demo_upscale.ipynb
scripts/: generate_results_gallery.py  train_quick_demo.py
src/: __init__.py  dataset.py  discriminator.py  inference.py  model_registry.py  train.py  utils.py
src/esrgan_super_resolution/: __init__.py  inference.py  losses.py  rrdb_net.py  utils.py
src/models/: __init__.py  init.py  rrdb.py
tests/: test_discriminator.py  test_inference.py  test_losses.py  test_model_registry.py  test_rrdb_net.py
